# sundaycoding

./: BaseCrawler.py  FirefoxUserAgents.py  README.md
Data Wrangling 4/: README.md
UserAgents_Selenium/: FirefoxUserAgents.py  README.md
anno_nuovo_coi_bot/: README.md  bot-list.csv
dataframe-e-log/: README.md  audit_access.2025-11-08.log.html  audit_access.2025-11-09.log.html  test-analisi-log.py
dataframe-pulizia/: README.md  pulizia-log.py
decorator-di-intenti/: README.md  utils.py
frustrazione del programmatore/: README.md  malicious_dataset.csv  malicious_dataset.unique.csv  traffic_autoencoder.py
pandera/: README.md  validazione-qaria-milano.py
peffomance/: NetworkFinder.py  README.md
qaria-pipeline/: LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
qaria-pipeline/qaria/: __init__.py  health.py  ingest.py  load.py  paths.py  transform.py  validate.py
qaria-pipeline/scripts/: bootstrap.py  crontab.example  query_db.py
qaria-pipeline/tests/: test_pipeline.py
sundaycoding-alerting/: README.md  pyproject.toml
sundaycoding-alerting/examples/: basic_usage.py  custom_channel.py
sundaycoding-alerting/sundaycoding_alerting/: __init__.py
sundaycoding-alerting/tests/: test_alerter.py
tutto-sui-dataframe/: README.md  dati-test.csv  tutto-sui-dataframe.py
vatti_a_fidare_dell_ia/: README.md  good_dataset.csv  malicious_dataset.sample.csv  malicious_traffic_detector.py
vettorizzazione-e-log/: analisi-log.py  report_access.2025-11-28.log.html
