[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sundaycoding-alerting"
version = "0.1.0"
description = "Alerting unificato per pipeline: Telegram, Google Chat, FakeChat per dev"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Francesco Contini", email = "noreply@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]
keywords = ["alerting", "telegram", "google-chat", "pipeline", "monitoring", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/continif/sundaycoding-alerting"
Repository = "https://github.com/continif/sundaycoding-alerting"
Newsletter = "https://sundaycoding.substack.com"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
include = ["sundaycoding_alerting*"]
exclude = ["tests*", "examples*"]
